--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Create production Firebase options
         run: |
           mkdir -p lib
-          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options.dart
+          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options_prod.dart
 
       - name: Build web for production
         run: flutter build web --release --dart-define=FLAVOR=production
@@ -153,7 +153,7 @@ jobs:
       - name: Create production Firebase options
         run: |
           mkdir -p lib
-          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options.dart
+          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options_prod.dart
 
       - name: Setup provisioning profile
         env:
@@ -223,7 +223,7 @@ jobs:
       - name: Create production Firebase options
         run: |
           mkdir -p lib
-          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options.dart
+          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options_prod.dart
 
       - name: Create keystore
         env:
