--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -62,6 +62,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create .env file from secrets
+        run: |
+          cat > .env << 'EOF'
+          # Production Firebase Configuration (from GitHub Actions secrets)
+          PROD_FIREBASE_PROJECT_ID=${{ secrets.PROD_FIREBASE_PROJECT_ID }}
+          PROD_FIREBASE_API_KEY=${{ secrets.PROD_FIREBASE_API_KEY }}
+          PROD_FIREBASE_APP_ID_WEB=${{ secrets.PROD_FIREBASE_APP_ID_WEB }}
+          PROD_FIREBASE_APP_ID_ANDROID=${{ secrets.PROD_FIREBASE_APP_ID_ANDROID }}
+          PROD_FIREBASE_APP_ID_IOS=${{ secrets.PROD_FIREBASE_APP_ID_IOS }}
+          PROD_FIREBASE_APP_ID_MACOS=${{ secrets.PROD_FIREBASE_APP_ID_MACOS }}
+          PROD_FIREBASE_AUTH_DOMAIN=${{ secrets.PROD_FIREBASE_AUTH_DOMAIN }}
+          PROD_FIREBASE_DATABASE_URL=${{ secrets.PROD_FIREBASE_DATABASE_URL }}
+          PROD_FIREBASE_STORAGE_BUCKET=${{ secrets.PROD_FIREBASE_STORAGE_BUCKET }}
+          PROD_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.PROD_FIREBASE_MESSAGING_SENDER_ID }}
+          PROD_FIREBASE_MEASUREMENT_ID=${{ secrets.PROD_FIREBASE_MEASUREMENT_ID }}
+          EOF
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -74,11 +91,6 @@ jobs:
 
       - name: Run build_runner
         run: dart run build_runner build --delete-conflicting-outputs
-
-      - name: Create production Firebase options
-        run: |
-          mkdir -p lib
-          echo '${{ secrets.FIREBASE_OPTIONS_PROD }}' > lib/firebase_options_prod.dart
 
       - name: Build web for production
         run: flutter build web --release --dart-define=FLAVOR=production
