--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -117,66 +117,21 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Create dev Firebase options
+      - name: Create .env file from secrets
         run: |
-          mkdir -p lib
-          cat > lib/firebase_options_dev.dart << 'EOF'
-          // Placeholder for CI - will be replaced with actual config
-          import 'package:firebase_core/firebase_core.dart' show FirebaseOptions;
-          import 'package:flutter/foundation.dart' show defaultTargetPlatform, kIsWeb, TargetPlatform;
-
-          class DefaultFirebaseOptions {
-            static FirebaseOptions get currentPlatform {
-              if (kIsWeb) {
-                return web;
-              }
-              switch (defaultTargetPlatform) {
-                case TargetPlatform.android:
-                  return android;
-                case TargetPlatform.iOS:
-                  return ios;
-                case TargetPlatform.macOS:
-                  return macos;
-                default:
-                  throw UnsupportedError('DefaultFirebaseOptions are not supported for this platform.');
-              }
-            }
-
-            static const FirebaseOptions web = FirebaseOptions(
-              apiKey: 'fake-api-key',
-              appId: 'fake-app-id',
-              messagingSenderId: 'fake-sender-id',
-              projectId: 'fake-project-id',
-              authDomain: 'fake-project.firebaseapp.com',
-              storageBucket: 'fake-project.appspot.com',
-            );
-
-            static const FirebaseOptions android = FirebaseOptions(
-              apiKey: 'fake-api-key',
-              appId: 'fake-app-id',
-              messagingSenderId: 'fake-sender-id',
-              projectId: 'fake-project-id',
-              storageBucket: 'fake-project.appspot.com',
-            );
-
-            static const FirebaseOptions ios = FirebaseOptions(
-              apiKey: 'fake-api-key',
-              appId: 'fake-app-id',
-              messagingSenderId: 'fake-sender-id',
-              projectId: 'fake-project-id',
-              storageBucket: 'fake-project.appspot.com',
-              iosBundleId: 'com.faiseur.faiseur',
-            );
-
-            static const FirebaseOptions macos = FirebaseOptions(
-              apiKey: 'fake-api-key',
-              appId: 'fake-app-id',
-              messagingSenderId: 'fake-sender-id',
-              projectId: 'fake-project-id',
-              storageBucket: 'fake-project.appspot.com',
-              iosBundleId: 'com.faiseur.faiseur',
-            );
-          }
+          cat > .env << 'EOF'
+          # Dev Firebase Configuration (from GitHub Actions secrets or defaults)
+          DEV_FIREBASE_PROJECT_ID=${{ secrets.DEV_FIREBASE_PROJECT_ID || 'faiseur-dev' }}
+          DEV_FIREBASE_API_KEY=${{ secrets.DEV_FIREBASE_API_KEY || 'fake-api-key' }}
+          DEV_FIREBASE_APP_ID_WEB=${{ secrets.DEV_FIREBASE_APP_ID_WEB || 'fake-app-id' }}
+          DEV_FIREBASE_APP_ID_ANDROID=${{ secrets.DEV_FIREBASE_APP_ID_ANDROID || 'fake-app-id' }}
+          DEV_FIREBASE_APP_ID_IOS=${{ secrets.DEV_FIREBASE_APP_ID_IOS || 'fake-app-id' }}
+          DEV_FIREBASE_APP_ID_MACOS=${{ secrets.DEV_FIREBASE_APP_ID_MACOS || 'fake-app-id' }}
+          DEV_FIREBASE_AUTH_DOMAIN=${{ secrets.DEV_FIREBASE_AUTH_DOMAIN || 'faiseur-dev.firebaseapp.com' }}
+          DEV_FIREBASE_DATABASE_URL=${{ secrets.DEV_FIREBASE_DATABASE_URL || 'https://faiseur-dev.firebaseio.com' }}
+          DEV_FIREBASE_STORAGE_BUCKET=${{ secrets.DEV_FIREBASE_STORAGE_BUCKET || 'faiseur-dev.appspot.com' }}
+          DEV_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.DEV_FIREBASE_MESSAGING_SENDER_ID || 'fake-sender-id' }}
+          DEV_FIREBASE_MEASUREMENT_ID=${{ secrets.DEV_FIREBASE_MEASUREMENT_ID || '' }}
           EOF
 
       - name: Build web
@@ -209,10 +164,22 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Create dev Firebase options (placeholder)
+      - name: Create .env file from secrets
         run: |
-          mkdir -p lib
-          echo "// Placeholder - see build-web job for full content" > lib/firebase_options_dev.dart
+          cat > .env << 'EOF'
+          # Dev Firebase Configuration (from GitHub Actions secrets or defaults)
+          DEV_FIREBASE_PROJECT_ID=${{ secrets.DEV_FIREBASE_PROJECT_ID || 'faiseur-dev' }}
+          DEV_FIREBASE_API_KEY=${{ secrets.DEV_FIREBASE_API_KEY || 'fake-api-key' }}
+          DEV_FIREBASE_APP_ID_WEB=${{ secrets.DEV_FIREBASE_APP_ID_WEB || 'fake-app-id' }}
+          DEV_FIREBASE_APP_ID_ANDROID=${{ secrets.DEV_FIREBASE_APP_ID_ANDROID || 'fake-app-id' }}
+          DEV_FIREBASE_APP_ID_IOS=${{ secrets.DEV_FIREBASE_APP_ID_IOS || 'fake-app-id' }}
+          DEV_FIREBASE_APP_ID_MACOS=${{ secrets.DEV_FIREBASE_APP_ID_MACOS || 'fake-app-id' }}
+          DEV_FIREBASE_AUTH_DOMAIN=${{ secrets.DEV_FIREBASE_AUTH_DOMAIN || 'faiseur-dev.firebaseapp.com' }}
+          DEV_FIREBASE_DATABASE_URL=${{ secrets.DEV_FIREBASE_DATABASE_URL || 'https://faiseur-dev.firebaseio.com' }}
+          DEV_FIREBASE_STORAGE_BUCKET=${{ secrets.DEV_FIREBASE_STORAGE_BUCKET || 'faiseur-dev.appspot.com' }}
+          DEV_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.DEV_FIREBASE_MESSAGING_SENDER_ID || 'fake-sender-id' }}
+          DEV_FIREBASE_MEASUREMENT_ID=${{ secrets.DEV_FIREBASE_MEASUREMENT_ID || '' }}
+          EOF
 
       - name: Build macOS
         run: flutter build macos --release --dart-define=FLAVOR=dev
