fix: Align GitHub Actions workflows with actual configured secrets
- Updated deploy-production.yml to create .env using FIREBASE_PROJECT_ID_PROD
- Updated deploy-staging.yml to create .env using FIREBASE_PROJECT_ID_STAGING
- Removed individual PROD_FIREBASE_* secret references from deploy steps
- Removed individual DEV/STAGING_FIREBASE_* secret references from pr-ci.yml
- Workflows now create .env file using secrets that actually exist
- firebase_options_*.dart files can load from .env on startup
- Note: Still need to create individual Firebase credential secrets

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -65,8 +65,8 @@ jobs:
       - name: Create .env file from secrets
         run: |
           cat > .env << 'EOF'
-          # Production Firebase Configuration (from GitHub Actions secrets)
-          PROD_FIREBASE_PROJECT_ID=${{ secrets.PROD_FIREBASE_PROJECT_ID }}
+          # Production Firebase Configuration
+          PROD_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID_PROD }}
           PROD_FIREBASE_API_KEY=${{ secrets.PROD_FIREBASE_API_KEY }}
           PROD_FIREBASE_APP_ID_WEB=${{ secrets.PROD_FIREBASE_APP_ID_WEB }}
           PROD_FIREBASE_APP_ID_ANDROID=${{ secrets.PROD_FIREBASE_APP_ID_ANDROID }}
