--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -28,6 +28,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create .env file from secrets
+        run: |
+          cat > .env << 'EOF'
+          # Staging Firebase Configuration
+          STAGING_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID_STAGING }}
+          STAGING_FIREBASE_API_KEY=${{ secrets.STAGING_FIREBASE_API_KEY }}
+          STAGING_FIREBASE_APP_ID_WEB=${{ secrets.STAGING_FIREBASE_APP_ID_WEB }}
+          STAGING_FIREBASE_APP_ID_ANDROID=${{ secrets.STAGING_FIREBASE_APP_ID_ANDROID }}
+          STAGING_FIREBASE_APP_ID_IOS=${{ secrets.STAGING_FIREBASE_APP_ID_IOS }}
+          STAGING_FIREBASE_APP_ID_MACOS=${{ secrets.STAGING_FIREBASE_APP_ID_MACOS }}
+          STAGING_FIREBASE_AUTH_DOMAIN=${{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}
+          STAGING_FIREBASE_DATABASE_URL=${{ secrets.STAGING_FIREBASE_DATABASE_URL }}
+          STAGING_FIREBASE_STORAGE_BUCKET=${{ secrets.STAGING_FIREBASE_STORAGE_BUCKET }}
+          STAGING_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.STAGING_FIREBASE_MESSAGING_SENDER_ID }}
+          STAGING_FIREBASE_MEASUREMENT_ID=${{ secrets.STAGING_FIREBASE_MEASUREMENT_ID }}
+          EOF
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -40,23 +57,6 @@ jobs:
 
       - name: Run build_runner
         run: dart run build_runner build --delete-conflicting-outputs
-
-      - name: Create .env file from secrets
-        run: |
-          cat > .env << 'EOF'
-          # Staging Firebase Configuration (from GitHub Actions secrets)
-          STAGING_FIREBASE_PROJECT_ID=${{ secrets.STAGING_FIREBASE_PROJECT_ID }}
-          STAGING_FIREBASE_API_KEY=${{ secrets.STAGING_FIREBASE_API_KEY }}
-          STAGING_FIREBASE_APP_ID_WEB=${{ secrets.STAGING_FIREBASE_APP_ID_WEB }}
-          STAGING_FIREBASE_APP_ID_ANDROID=${{ secrets.STAGING_FIREBASE_APP_ID_ANDROID }}
-          STAGING_FIREBASE_APP_ID_IOS=${{ secrets.STAGING_FIREBASE_APP_ID_IOS }}
-          STAGING_FIREBASE_APP_ID_MACOS=${{ secrets.STAGING_FIREBASE_APP_ID_MACOS }}
-          STAGING_FIREBASE_AUTH_DOMAIN=${{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}
-          STAGING_FIREBASE_DATABASE_URL=${{ secrets.STAGING_FIREBASE_DATABASE_URL }}
-          STAGING_FIREBASE_STORAGE_BUCKET=${{ secrets.STAGING_FIREBASE_STORAGE_BUCKET }}
-          STAGING_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.STAGING_FIREBASE_MESSAGING_SENDER_ID }}
-          STAGING_FIREBASE_MEASUREMENT_ID=${{ secrets.STAGING_FIREBASE_MEASUREMENT_ID }}
-          EOF
 
       - name: Build web for staging
         run: flutter build web --release --dart-define=FLAVOR=staging
