--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -117,22 +117,8 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Create .env file from secrets
-        run: |
-          cat > .env << 'EOF'
-          # Dev Firebase Configuration (from GitHub Actions secrets or defaults)
-          DEV_FIREBASE_PROJECT_ID=${{ secrets.DEV_FIREBASE_PROJECT_ID || 'faiseur-dev' }}
-          DEV_FIREBASE_API_KEY=${{ secrets.DEV_FIREBASE_API_KEY || 'fake-api-key' }}
-          DEV_FIREBASE_APP_ID_WEB=${{ secrets.DEV_FIREBASE_APP_ID_WEB || 'fake-app-id' }}
-          DEV_FIREBASE_APP_ID_ANDROID=${{ secrets.DEV_FIREBASE_APP_ID_ANDROID || 'fake-app-id' }}
-          DEV_FIREBASE_APP_ID_IOS=${{ secrets.DEV_FIREBASE_APP_ID_IOS || 'fake-app-id' }}
-          DEV_FIREBASE_APP_ID_MACOS=${{ secrets.DEV_FIREBASE_APP_ID_MACOS || 'fake-app-id' }}
-          DEV_FIREBASE_AUTH_DOMAIN=${{ secrets.DEV_FIREBASE_AUTH_DOMAIN || 'faiseur-dev.firebaseapp.com' }}
-          DEV_FIREBASE_DATABASE_URL=${{ secrets.DEV_FIREBASE_DATABASE_URL || 'https://faiseur-dev.firebaseio.com' }}
-          DEV_FIREBASE_STORAGE_BUCKET=${{ secrets.DEV_FIREBASE_STORAGE_BUCKET || 'faiseur-dev.appspot.com' }}
-          DEV_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.DEV_FIREBASE_MESSAGING_SENDER_ID || 'fake-sender-id' }}
-          DEV_FIREBASE_MEASUREMENT_ID=${{ secrets.DEV_FIREBASE_MEASUREMENT_ID || '' }}
-          EOF
+      - name: Run build_runner
+        run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build web
         run: flutter build web --release --dart-define=FLAVOR=dev
@@ -163,23 +149,6 @@ jobs:
 
       - name: Get dependencies
         run: flutter pub get
-
-      - name: Create .env file from secrets
-        run: |
-          cat > .env << 'EOF'
-          # Dev Firebase Configuration (from GitHub Actions secrets or defaults)
-          DEV_FIREBASE_PROJECT_ID=${{ secrets.DEV_FIREBASE_PROJECT_ID || 'faiseur-dev' }}
-          DEV_FIREBASE_API_KEY=${{ secrets.DEV_FIREBASE_API_KEY || 'fake-api-key' }}
-          DEV_FIREBASE_APP_ID_WEB=${{ secrets.DEV_FIREBASE_APP_ID_WEB || 'fake-app-id' }}
-          DEV_FIREBASE_APP_ID_ANDROID=${{ secrets.DEV_FIREBASE_APP_ID_ANDROID || 'fake-app-id' }}
-          DEV_FIREBASE_APP_ID_IOS=${{ secrets.DEV_FIREBASE_APP_ID_IOS || 'fake-app-id' }}
-          DEV_FIREBASE_APP_ID_MACOS=${{ secrets.DEV_FIREBASE_APP_ID_MACOS || 'fake-app-id' }}
-          DEV_FIREBASE_AUTH_DOMAIN=${{ secrets.DEV_FIREBASE_AUTH_DOMAIN || 'faiseur-dev.firebaseapp.com' }}
-          DEV_FIREBASE_DATABASE_URL=${{ secrets.DEV_FIREBASE_DATABASE_URL || 'https://faiseur-dev.firebaseio.com' }}
-          DEV_FIREBASE_STORAGE_BUCKET=${{ secrets.DEV_FIREBASE_STORAGE_BUCKET || 'faiseur-dev.appspot.com' }}
-          DEV_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.DEV_FIREBASE_MESSAGING_SENDER_ID || 'fake-sender-id' }}
-          DEV_FIREBASE_MEASUREMENT_ID=${{ secrets.DEV_FIREBASE_MEASUREMENT_ID || '' }}
-          EOF
 
       - name: Build macOS
         run: flutter build macos --release --dart-define=FLAVOR=dev
