Refactor provider classes for improved readability and consistency
- Split long class declarations across multiple lines for better readability in app_providers.g.dart and firebase_providers.g.dart.
- Adjusted formatting of overrideWithValue methods to enhance clarity.
- Added unit tests for User, TodoList, and Todo entities to ensure proper functionality and data integrity.
- Implemented conversion tests between entity and model classes for User, TodoList, and Todo to verify data consistency.

--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
 # Build configuration for build_runner
-# Skips custom_lint and other problematic builders
+# Configures builders for code generation
 
 targets:
   $default:
@@ -12,6 +12,4 @@ targets:
         enabled: true
       # Skip problematic builders
       custom_lint:
-        enabled: false
-      json_serializable:
         enabled: false
