test: verify verbose pre-commit hook output

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   freezed: ^3.0.0
   integration_test:
     sdk: flutter
+  mocktail: ^1.0.0
   riverpod_generator: ^3.0.0
 
 flutter:
