chore: sync firebase config and tests

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -62,9 +62,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Create .env file from secrets
+      - name: Create .env.prod file from secrets
         run: |
-          cat > .env << 'EOF'
+          cat > .env.prod << 'EOF'
           # Production Firebase Configuration
           PROD_FIREBASE_PROJECT_ID=${{ secrets.PROD_FIREBASE_PROJECT_ID }}
           PROD_FIREBASE_API_KEY=${{ secrets.PROD_FIREBASE_API_KEY }}
@@ -72,6 +72,7 @@ jobs:
           PROD_FIREBASE_AUTH_DOMAIN=${{ secrets.PROD_FIREBASE_AUTH_DOMAIN }}
           PROD_FIREBASE_STORAGE_BUCKET=${{ secrets.PROD_FIREBASE_STORAGE_BUCKET }}
           PROD_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.PROD_FIREBASE_MESSAGING_SENDER_ID }}
+          PROD_FIREBASE_MEASUREMENT_ID=${{ secrets.PROD_FIREBASE_MEASUREMENT_ID }}
           EOF
 
       - name: Setup Flutter
@@ -87,8 +88,11 @@ jobs:
       - name: Run build_runner
         run: dart run build_runner build --delete-conflicting-outputs
 
-      - name: Build web for production
-        run: flutter build web --release --dart-define=FLAVOR=production
+      - name: Build web app
+        run: |
+          flutter build web --release --dart-define-from-file=.env.prod --dart-define=FLAVOR=production
+          mkdir -p build/functions_deployment
+          cp -r functions/* build/functions_deployment/
 
       - name: Deploy to Firebase Hosting (Production)
         uses: FirebaseExtended/action-hosting-deploy@v0
