--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Create .env file from secrets
+      - name: Create .env.staging file from secrets
         run: |
-          cat > .env << 'EOF'
+          cat > .env.staging << 'EOF'
           # Staging Firebase Configuration
           STAGING_FIREBASE_PROJECT_ID=${{ secrets.STAGING_FIREBASE_PROJECT_ID }}
           STAGING_FIREBASE_API_KEY=${{ secrets.STAGING_FIREBASE_API_KEY }}
@@ -38,6 +38,7 @@ jobs:
           STAGING_FIREBASE_AUTH_DOMAIN=${{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}
           STAGING_FIREBASE_STORAGE_BUCKET=${{ secrets.STAGING_FIREBASE_STORAGE_BUCKET }}
           STAGING_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.STAGING_FIREBASE_MESSAGING_SENDER_ID }}
+          STAGING_FIREBASE_MEASUREMENT_ID=${{ secrets.STAGING_FIREBASE_MEASUREMENT_ID }}
           EOF
 
       - name: Setup Flutter
@@ -54,7 +55,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build web for staging
-        run: flutter build web --release --dart-define=FLAVOR=staging
+        run: flutter build web --release --dart-define-from-file=.env.staging --dart-define=FLAVOR=staging
 
       - name: Deploy to Firebase Hosting (Staging)
         uses: FirebaseExtended/action-hosting-deploy@v0
