--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.19.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^3.0.0
+  shared_preferences: ^2.3.2
   uuid: ^4.5.1
 
 dev_dependencies:
