--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -160,7 +160,7 @@ jobs:
           path: build/macos/Build/Products/Release/
           retention-days: 7
 
-  integration-test:
+  integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -178,29 +178,11 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: Setup Node.js for Firebase Emulators
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Start Firebase Emulators
-        run: |
-          firebase emulators:start --only auth,firestore,storage &
-          sleep 10
-
       - name: Run integration tests
         run: flutter test integration_test/
-
-      - name: Stop Firebase Emulators
-        if: always()
-        run: |
-          pkill -f firebase-emulators || true
 
   security-scan:
     name: Security Scan
